kustomize/overlay/test/testns-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testns
  labels:
    environmentId: env_bc07e883-d8ea-4b10-8f58-e39439fa0e66
    projectId: project_f9d8de1f-1e49-4d0a-8e49-657f15fd532b
    projectName: common-project-testing
    environmentName: test
    organizationId: org_6de1b366-9da6-4d55-b363-f5a2c4382016
